--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ LANGSMITH_PROJECT="langsmith-debug"
 OPENAI_API_KEY="<redacted>"
 WEAVIATE_API_KEY="<redacted>" # Expires every 14 days if on free version
 WEAVIATE_URL="<redacted>" # Expires every 14 days if on free version
+TAVILY_API_KEY="<redacted>"
